--- a/dadula.html
+++ b/dadula.html
@@ -3,30 +3,36 @@
 <html>
 
 <head>
-<style>
+    <title>Dadula</title>
+    <style>
+        iframe {
+            width: 560px;
+            height: 315px;
+        }
+        table {
+            width: 100%;
+        }
 
-    table, th, td {
-        border: 1px solid black; 
-        border-collapse: collapse;
-    }
+        table, th, td {
+            border: 1px solid black; 
+            border-collapse: collapse;
+        }
 
-    th, td { 
-        padding: 10px;
-    }
-</style> 
+        th, td { 
+            padding: 10px;
+        }
+    </style> 
 </head>
 
 <body>
 
-      <iframe width="562" height="315"
-        src="love.mp4" >
-      </iframe>
+    <iframe src="https://www.youtube.com/embed/-5q5mZbe3V8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <h2>cellpadding</h2>
 
     <p>cell padding specifies the space between the cell content and its borders.</p>
 
-    <table style="width:100%">
+    <table>
 
         <tr> 
             <th>Firstname</th> 
